[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "stageOne",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "StageTwo",
"speed": 5.0
} ]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Counter" type="Label" parent="."]
anchor_left = 0.507
anchor_top = 0.272
anchor_right = 0.507
anchor_bottom = 0.272
margin_left = -27.168
margin_top = -9.20001
margin_right = 26.832
margin_bottom = 9.79999
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Clicker" type="Button" parent="."]
anchor_left = 0.469727
anchor_top = 0.498333
anchor_right = 0.527344
anchor_bottom = 0.513333
margin_left = -6.0
margin_top = -10.0
margin_right = 6.0
margin_bottom = 10.0
text = "Click"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ImprovementButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.61
anchor_right = 0.5
anchor_bottom = 0.61
margin_left = -65.0
margin_top = -16.0
margin_right = 67.0
margin_bottom = 16.0
text = "Buy Improvement!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImprovementCost" type="Label" parent="."]
anchor_left = 0.635
anchor_top = 0.61
anchor_right = 0.635
anchor_bottom = 0.61
margin_left = -18.24
margin_top = -16.0
margin_right = 32.76
margin_bottom = 16.0
text = "Cost:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickerLabel" type="Label" parent="."]
anchor_left = 0.642
anchor_top = 0.5
anchor_right = 0.642
anchor_bottom = 0.5
margin_left = -25.408
margin_top = -11.0
margin_right = 25.592
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondImprovementCost" type="Label" parent="."]
anchor_left = 0.637
anchor_top = 0.742
anchor_right = 0.637
anchor_bottom = 0.742
margin_left = -20.288
margin_top = -10.1
margin_right = 19.712
margin_bottom = 9.89996
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondImprovementButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.705
anchor_right = 0.5
anchor_bottom = 0.705
margin_left = -84.0
margin_top = -15.0
margin_right = 85.0
margin_bottom = 13.0
text = "Buy Other Improvement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 508.329, 228.605 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "StageTwo"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Clicker" to="." method="_on_Clicker_Button_pressed"]
[connection signal="pressed" from="ImprovementButton" to="." method="_on_Improvement_Button_pressed"]
[connection signal="pressed" from="SecondImprovementButton" to="." method="_on_SecondImprovementButton_pressed"]
